feat: add foundational website pages, layout, global settings, and UI components.

--- a/src/content/settings/globals.mdx
+++ b/src/content/settings/globals.mdx
@@ -1,4 +1,4 @@
 ---
-marqueeText: "THE THINKING ARCHITECT // MASTERCLASS // <CurrentYear /> // JOIN THE COMMUNITY"
+marqueeText: "THE THINKING ARCHITECT // TALKS & SESSIONS // 2026 // JOIN THE COMMUNITY — THE THINKING ARCHITECT // PROGRAMS & MASTERCLASSES // 2026 // JOIN THE COMMUNITY — THE THINKING ARCHITECT // ARCHITECTURE AFTER SCHOOL // 2026 // JOIN THE COMMUNITY"
 footerMarqueeText: "TTA"
 ---
