feat: Implement dynamic program and event content management with magic tags, Airtable integration, and initial 'Locked-IN 2026' program content.

--- a/src/content/programs/core-foundations.mdx
+++ b/src/content/programs/core-foundations.mdx
@@ -3,7 +3,7 @@ title: "CORE FOUNDATIONS"
 label: "Program / Open"
 status: "Ongoing"
 featured: false
-description: "Mastering the structural logic of architectural projects. Open enrollment for qualified practitioners in <CurrentYear />."
+description: "Mastering the structural logic of architectural projects. Open enrollment for qualified practitioners."
 ---
 
 <section className="max-w-[1600px] w-full px-6 py-40 border-x border-t border-foreground/5 grid grid-cols-1 lg:grid-cols-2 gap-40">
@@ -32,12 +32,12 @@ description: "Mastering the structural logic of architectural projects. Open enr
                <p className="text-lg text-foreground/60">Professional Resilience Strategies</p>
             </li>
          </ul>
-         <Link 
+         <a 
            href="https://t.me/thethinkingarchitect"
-           className="btn-outline py-5 text-xl justify-center mt-4 group"
+           className="btn-outline py-5 text-xl justify-center mt-4 group block text-center"
          >
-           Enrollment Hub <ArrowRight size={20} className="group-hover:translate-x-2 transition-transform" />
-         </Link>
+           Enrollment Hub
+         </a>
       </div>
    </div>
 </section>
